git commands added to the cammand page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <img src="tech.jpg" width="460px" alt="">
         <h2>Welcome to the github section</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil explicabo velit iste. Numquam nisi sit dolor, eveniet inventore, aliquam distinctio explicabo ullam ab eos quo, voluptatum itaque ut necessitatibus vitae!</p>
+        <a href="commands.html">Explore Commands Here</a>
         </section>
     </div>
     
