again commands line added

--- a/commands.html
+++ b/commands.html
@@ -14,6 +14,10 @@
         <li>git add index.html</li><br>
         <li>git commit -m'gfjdggfgdhdfgdf'</li>
         <li>git add .</li>
+        <li>git log</li>
+        <li>git reset --hard</li>
+        <li>git reset --soft</li>
+        <li></li>
         <li></li>
         <li></li>
         <li></li>
