create a new page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2>Welcome to the github section</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil explicabo velit iste. Numquam nisi sit dolor, eveniet inventore, aliquam distinctio explicabo ullam ab eos quo, voluptatum itaque ut necessitatibus vitae!</p>
         <a href="commands.html">Explore Commands Here</a>
+        <a href="new.html">new page </a>
         </section>
     </div>
     
