table is added now

--- a/new.html
+++ b/new.html
@@ -1,2 +1,25 @@
+
 <h2>this is test page</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis aliquid optio ipsam provident ab repudiandae aperiam dolorem quos, inventore laboriosam! Recusandae consequuntur est hic magni aliquam impedit odit doloremque non!</p>
+<table border style="width:460px;margin:auto" >
+    <tr>
+        <th>no</th>
+        <th>name</th>
+        <th>age</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>abhi</td>
+        <td>22</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>achu</td>
+        <td>21</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>nandu</td>
+        <td>22</td>
+    </tr>
+</table>
